# exciting-environments

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  dev.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: build_and_test.yml
_modules/: index.html
_modules/exciting_environments/: env_struct.html
_modules/exciting_environments/cart_pole/: cart_pole_env.html
_modules/exciting_environments/mass_spring_damper/: mass_spring_damper_env.html
_modules/exciting_environments/pendulum/: pendulum_env.html
_modules/exciting_envs/: env_struct.html
_modules/exciting_envs/cart_pole/: cart_pole_env.html
_modules/exciting_envs/mass_spring_damper/: mass_spring_damper_env.html
_modules/exciting_envs/pendulum/: pendulum_env.html
_sources/: index.rst.txt
_sources/parts/environments/: environment.rst.txt
docs/: conf.py  index.rst  requirements.txt
docs/parts/environments/: environment.rst
evaluations/: data_evaluation.py  density_estimation.py  losses.py  model_evaluation.py  models.py  utils.py
examples/: 1.test_envs.ipynb  2.test_envs.ipynb  3.2.Zeitvergleich.ipynb  3.3.Zeitvergleich.ipynb  3.4.Dataclasses.ipynb  3.5.2.Dataclass_Array_Flatten.ipynb  3.5.Array_Dict.ipynb  3.5.Array_Dict_Dataclass.ipynb  3.6.Dataclass_impl.ipynb  3.7.2.Dataclass_impl.ipynb  3.7.Dataclass_impl.ipynb  3.Zeitvergleich.ipynb  4.1.simulate_ahead.ipynb  comp_gpu_cpu.ipynb  comp_sim_time.ipynb  comp_step_time.ipynb  core_env_test.ipynb  env_test.ipynb  equinox_tests.ipynb  example_gymwrapper.ipynb  im_tests copy.ipynb  im_tests.ipynb  mujoco_example.ipynb  new_vmap.ipynb  package_test.ipynb  pmsm_example.ipynb  test_envs copy.ipynb  test_envs.ipynb
examples_own/: 5.1.pmsm.ipynb  5.2.pmsm_saturated.ipynb  6.4.references.ipynb  6.5.pmsm_sim_ahead.ipynb  dev.ipynb  example_simulate_ahead.ipynb  interpolator_jax.ipynb  package_test.ipynb  pmsm_example.ipynb
exciting_environments/: Gym_Wrapper.py  __init__.py  classic_core_env.py  core_env copy.py  core_env.py  gym_wrapper.py  mujoco_wrapper.py  registration.py  spaces.py  utils.py
exciting_environments/acrobot/: __init__.py  acrobot_env.py
exciting_environments/cart_pole/: cart_pole_env.py
exciting_environments/fluid_tank/: __init__.py  fluid_tank_env.py
exciting_environments/im/: __init__.py  im_env.py  motor_parameters.py
exciting_environments/mass_spring_damper/: __init__.py  mass_spring_damper_env.py
exciting_environments/pendulum/: __init__.py  pendulum_env.py
exciting_environments/pmsm/: LUT_BRUSA_jax_grad.mat  LUT_SEW_jax_grad.mat  __init__.py  motor_parameters.py  pmsm_env.py  pmsm_env_old.py
exciting_environments/saturated_pmsm/: LUT_data.mat
exciting_environments/sixphase_pmsm/: __init__.py  motor_parameters.py  sixphase_pmsm_env.py
exciting_envs/: __init__.py  env_struct.py
exciting_envs/Cart_Pole/: __init__.py  cart_pole.py  cart_pole_env.py
exciting_envs/cart_pole/: cart_pole_env.py
exciting_envs/cartpole/: __init__.py
exciting_envs/mass_spring_damper/: mass_spring_damper_env.py
exciting_envs/nonlinear/pendulum/: pendulum_env.py
exciting_envs/pendulum/: pendulum_env.py
notebooks_eval/: 1.data_evaluator.ipynb  2.model_evaluator.ipynb
parts/: readme.html
parts/environments/: environment.html
parts/environments/cart_pole/: cart_pole.html  cart_pole_env.html
test/envs/cartpole/: test_cartpole.py
test/test_environments/: test_envs.py
tests/: pytest.ini  test_gym_wrapper.py
tests/envs/: test_core_functions.py
(+49 files in other folders)
