[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exciting_environments_test"
version = "0.0.11"
authors = [
  { name="Oliver Schweins", email="oliverjs@mail.uni-paderborn.de" },
]
description = "Physical differential equations wrapped into Gymnasium environments"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib>=3.1.2",
    "jax>=0.4.13",
    "chex>=0.1.7",
    "numpy>=1.16.4",
    "scipy>=1.4.1",
    "gym<0.24.0,>=0.15.4",
    "pytest>=5.2.2",
    "gymnasium>=0.28.1",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://excitingsystems.github.io/exciting-environments/"
