[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exciting_environments"
version = "0.3.1"
authors = [
  { name="Oliver Schweins", email="oliverjs@mail.uni-paderborn.de" },
  { name="Hendrik Vater", email="vater@lea.uni-paderborn.de" },
]
description = "Physical differential equations wrapped into Gymnasium environments"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib==3.10.8",
    "jax==0.9.0",
    "chex==0.1.91",
    "pytest==7.0.0",
    "pytest-cov==5.0.0",
    "diffrax==0.7.0",
    "mujoco==3.4.0",
    "mujoco-mjx==3.4.0",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]==0.9.0"
]
cuda13 = [
    "jax[cuda13]==0.9.0"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]


[project.urls]
"Homepage" = "https://excitingsystems.github.io/exciting-environments/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["exciting_environments*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
exciting_environments = ["exciting_environments/pmsm/*.mat"]

[tool.black]
line-length = 120
